# Ecommerce

./: README.md  system_chatbot.drawio
Crawl_technique/: crawl_laptop.ipynb
Crawl_technique/data/: laptop(new).csv  laptop.csv  laptop_technique(1).csv
Downloads/crawl_laptop/: craw_technique.ipynb
agent/content_product/: README.md  pyproject.toml
agent/content_product/src/content_product/: crew.py  main.py
agent/content_product/src/content_product/config/: agents.yaml  tasks.yaml
aws/: .gitlab-ci.yml  main.tf
aws/modules/ec2/: main.tf
aws/modules/security/: main.tf
client/: .env.local.example  package-lock.json  package.json
client/components/common/: BotChat.tsx  Chatbot.tsx  Comment.tsx  Footer.tsx  Specifi.tsx  UserLayout.tsx
client/pages/: [slug].tsx  index.tsx
client/pages/auth/: login.tsx  register.tsx
client/types/: index.ts
crawler/: crawl.py
data/origin/: .sh
docs/: docs.md  elasticsearch_docker.md  requirements.txt
evaluate/Evaluate_Router/: REPORT_EVALUATE_ROUTER_MODULE.ipynb  question_classification.csv
import-export-backend/: .env  .example-env  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
import-export-backend/src/: app.module.ts  app.service.ts  main.ts
import-export-fronend/: README.md  package-lock.json  package.json
payment-client/: package-lock.json  package.json
payment-sever/: .env.example  .prettierrc  docker-compose.yaml  nest-cli.json  package.json  tsconfig.json
server/: .env.example  docker-compose.yml  package-lock.json  package.json
server/src/: app.module.ts  main.ts
(+175 files in other folders)
