[project]
name = "content_product"
version = "0.1.0"
description = "content_product using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
content_product = "content_product.main:run"
run_crew = "content_product.main:run"
train = "content_product.main:train"
replay = "content_product.main:replay"
test = "content_product.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
